--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -2679,6 +2679,34 @@ button:hover {
 ***********DASHBOARD************
 **********************************
 */
+.dashboard{
+#search-results-manga {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  .manga-result{
+    display: flex;
+    flex-direction: column;
+    img{
+      width: 30vh;
+      height: 40vh;
+      object-fit: cover;
+      margin: 1rem;
+    }
+    p{
+      font-size: 1.5rem;
+      text-align: center;
+      font-weight: 600;
+      width: 30vh;
+    }
+    button{
+      margin: 0.5rem;
+    }
+  }
+
+}
+}
+
 
   div.headdashboard {
     height: 50vh;
@@ -3004,9 +3032,34 @@ button:hover {
 ***********DASHBOARD************
 **********************************
 */
-.headdashboard {
-  height: 30vh;
-  background: url(../img/dashboard_desktop.svg) no-repeat center center/cover;
+
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+
+  .block-gestion{
+    flex-direction: column;
+    margin: 1rem;
+    h2{
+      margin-bottom: 0.5rem;
+    }
+    form{
+      input{
+        height: 4vh;
+        border-radius: 5px;
+        padding: 0 5px;
+        background-color: #fcd1e6;
+      }
+      
+    }
+  }
+}
+
+#search-results-manga {
+   
 }
 
 .dashboard {
