--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -2341,6 +2341,12 @@ button:hover {
     -o-object-fit: cover;
        object-fit: cover;
     margin: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .dashboard #search-results-manga .manga-result img:hover {
+    filter: brightness(50%);
+    scale: 1.1;
   }
   .dashboard #search-results-manga .manga-result p {
     font-size: 1.5rem;
@@ -2350,6 +2356,33 @@ button:hover {
   }
   .dashboard #search-results-manga .manga-result button {
     margin: 0.5rem;
+  }
+  .dashboard .popup-content .close {
+    color: var(--fc-black);
+    font-size: 2rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .dashboard .popup-content .close:hover {
+    color: #cc392b;
+  }
+  .dashboard .popup-content h2 {
+    text-align: center;
+    color: var(--fc-black);
+  }
+  .dashboard #modifyMangaForm {
+    display: flex;
+    flex-direction: column;
+  }
+  .dashboard #modifyMangaForm label {
+    margin: 0.5rem 0;
+  }
+  .dashboard #modifyMangaForm input {
+    height: 4vh;
+    border-radius: 5px;
+    padding: 0 5px;
+    background-color: #fcd1e6;
   }
   div.headdashboard {
     height: 50vh;
