--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -2692,6 +2692,12 @@ button:hover {
       height: 40vh;
       object-fit: cover;
       margin: 1rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      &:hover{
+        filter: brightness(50%);
+        scale: 1.1;
+      }
     }
     p{
       font-size: 1.5rem;
@@ -2703,7 +2709,37 @@ button:hover {
       margin: 0.5rem;
     }
   }
+}
+.popup-content{
+  .close{
+    color: var(--fc-black);
+    font-size: 2rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
 
+    &:hover{
+      color: #cc392b;
+    }
+  }
+  h2{
+    text-align: center;
+    color: var(--fc-black);
+  }
+}
+#modifyMangaForm{
+  display: flex;
+  flex-direction: column;
+  label{
+    margin: 0.5rem 0;
+
+  }    
+  input{
+      height: 4vh;
+      border-radius: 5px;
+      padding: 0 5px;
+      background-color: #fcd1e6;
+    }
 }
 }
 
