--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -79,6 +79,10 @@ h6 {
 
   --m-all-5: 5vw;
   --mb-5: 5vw;
+
+  --clr-success: hsl(143, 100%, 26%);
+  --clr-warning: hsl(43, 100%, 66%);
+  --clr-error: hsl(348, 55%, 49%);
 }
 
 /*
@@ -474,6 +478,61 @@ footer > p {
 ***********LOGIN/REGISTER*********
 **********************************
 */
+
+.connexion input, 
+.login input {
+  outline: 3px solid hsl(203, 30%, 26%);
+}
+
+
+input:focus:valid,
+input:valid:not(:placeholder-shown) {
+  outline-color: var(--clr-success);
+}
+
+input:invalid:not(:placeholder-shown) {
+  outline-color: var(--clr-error);
+}
+
+input:focus:invalid:not(:placeholder-shown) {
+  outline-color: var(--clr-warning);
+}
+
+.hint {
+  color: var(--clr-warning);
+}
+.error {
+  color: var(--clr-error);
+}
+
+.hint,
+.error {
+  display: none;
+}
+
+/* show hint if user is in the input
+   but it is invalid */
+input:focus:invalid:not(:placeholder-shown) ~ .hint {
+  display: block;
+}
+
+/* show error after users leaves input
+   but it is invalid */
+
+input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
+  display: block;
+  /*   animation: form-error 250ms 3; */
+}
+
+@keyframes form-error {
+  25% {
+    translate: -5px;
+  }
+  75% {
+    translate: 5px;
+  }
+}
+
 .login {
   margin-top: 20px;
 }
@@ -3919,67 +3978,4 @@ section.see-volume {
   background-image: url(../img/vignette.svg);
   background-color: rgba(242, 235, 232, 0.8901960784);
   background-blend-mode: overlay;
-}
-
-
-input {
-  outline: 3px solid hsl(203, 30%, 26%);
-}
-
-input:focus:valid,
-input:valid:not(:placeholder-shown) {
-  outline-color: var(--clr-success);
-}
-
-input:invalid:not(:placeholder-shown) {
-  outline-color: var(--clr-error);
-}
-
-input:focus:invalid:not(:placeholder-shown) {
-  outline-color: var(--clr-warning);
-}
-
-.hint {
-  color: var(--clr-warning);
-}
-.error {
-  color: var(--clr-error);
-}
-
-.hint,
-.error {
-  display: none;
-}
-
-/* show hint if user is in the input
-   but it is invalid */
-input:focus:invalid:not(:placeholder-shown) ~ .hint {
-  display: block;
-}
-
-/* show error after users leaves input
-   but it is invalid */
-
-input:not(:focus):invalid:not(:placeholder-shown) ~ .error {
-  display: block;
-  /*   animation: form-error 250ms 3; */
-}
-
-@keyframes form-error {
-  25% {
-    translate: -5px;
-  }
-  75% {
-    translate: 5px;
-  }
-}
-
-/* add an animation when they have an error */
-
-@layer general-styling {
-  :root {
-    --clr-success: hsl(143, 100%, 26%);
-    --clr-warning: hsl(43, 100%, 66%);
-    --clr-error: hsl(348, 55%, 49%);
-  }
 }
