--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -4045,3 +4045,66 @@ h1{
   
 }
 }
+
+/******FAV PAGE *******/
+
+#section-stat {
+
+  .total-fav{
+    margin-bottom: 1rem;
+  }
+
+  .stat-name {
+    font-size: 1.2rem;
+  }
+  hr {
+    width: 100%;
+    margin: 4rem 0;
+    border: none;
+    border-top: 2px solid #ff3c68;
+  }
+
+  .statistique {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 1rem;
+
+    .statistique-barre {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: center;
+      border-radius: 8px;
+      color: white;
+      padding: 0 15px;
+      position: relative;
+      opacity: 0;
+      transform: translateY(50px);
+      transition: all 0.5s ease-out;
+
+      span {
+        margin-top: 0.5rem;
+      }
+
+      &.visible {
+        opacity: 1;
+        transform: translateY(0);
+        animation: pulseBar 1s ease-out;
+      }
+    }
+  }
+
+  @keyframes pulseBar {
+    0% {
+      transform: translateY(0) scaleY(0);
+    }
+    60% {
+      transform: translateY(0) scaleY(1.2);
+    }
+    100% {
+      transform: translateY(0) scaleY(1);
+    }
+  }
+}
