Fix dashboard book

--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -2479,6 +2479,19 @@ button:hover {
   ***********DASHBOARD************
   **********************************
   */
+  #volumesContainer {
+    display: flex;
+    flex-wrap: wrap;
+    height: 10rem;
+    overflow: scroll;
+  }
+  #volumesContainer .volume-item {
+    margin: 0 0.2rem;
+  }
+  #volumesContainer .volume-item span {
+    color: var(--fc-black);
+    font-size: 0.9rem;
+  }
   .dashboard #search-results-manga {
     display: flex;
     flex-wrap: wrap;
