--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -2369,6 +2369,9 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  input{
+    background-color: #f2ebe8;
+  }
 }
 
 .loup-search {
@@ -2836,7 +2839,23 @@ overflow: scroll;
   }
 }
 }
+#popupModified{
+  color: var(--fc-black);
+  .close{
+    font-size: 2rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.3s ease;
 
+    &:hover{
+      color: #cc392b;
+    }
+  }
+  h2{
+    text-align: center;
+  }
+  
+}
 .dashboard{
 #search-results-manga {
   display: flex;
@@ -2892,11 +2911,11 @@ overflow: scroll;
     margin: 0.5rem 0;
 
   }    
-  input{
+  input, textarea{
       height: 4vh;
       border-radius: 5px;
       padding: 0 5px;
-      background-color: #fcd1e6;
+      background-color: #f2ebe8;
     }
 }
 }
@@ -3253,7 +3272,7 @@ overflow: scroll;
         height: 4vh;
         border-radius: 5px;
         padding: 0 5px;
-        background-color: #fcd1e6;
+        background-color: #f2ebe8;
       }
       
     }
@@ -4065,13 +4084,15 @@ h1{
 /******FAV PAGE *******/
 
 #section-stat {
-
+width: 100%;
   .total-fav{
     margin-bottom: 1rem;
   }
 
   .stat-name {
-    font-size: 1.2rem;
+    font-size: 0.9rem;
+    text-align: center;
+    word-break: break-word;
   }
   hr {
     width: 100%;
@@ -4082,10 +4103,13 @@ h1{
 
   .statistique {
     display: flex;
-    gap: 1rem;
+    gap: 0.29rem;
+    padding: 2rem 1rem;
     justify-content: center;
-    align-items: flex-end;
-    padding: 1rem;
+    overflow-x: auto;
+    max-width: 100%;
+  }
+  
 
     .statistique-barre {
       display: flex;
@@ -4094,8 +4118,9 @@ h1{
       align-items: center;
       border-radius: 8px;
       color: white;
-      padding: 0 15px;
       position: relative;
+      min-width: 2.5rem;
+      max-width: 5rem;
       opacity: 0;
       transform: translateY(50px);
       transition: all 0.5s ease-out;
@@ -4122,5 +4147,19 @@ h1{
     100% {
       transform: translateY(0) scaleY(1);
     }
+  }
+
+@media screen and (max-width: 600px) {
+  .statistique-barre {
+    width: 40px;
+    min-width: 30px;
+  }
+
+  .stat-name {
+    font-size: 0.8rem;
+  }
+
+  .total-fav {
+    font-size: 0.9rem;
   }
 }
