--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -1782,7 +1782,10 @@ div.mangaPage svg.liked {
   flex-direction: column;
   align-items: center;
 }
-.modify-profile input {
+.modify-profile form {
+  margin-left: 25%;
+}
+.modify-profile form input {
   width: 50%;
   margin-bottom: 3vh;
   border-radius: 5px;
@@ -1792,11 +1795,12 @@ div.mangaPage svg.liked {
   font-family: var(--ff-barlow);
   transition: all ease 0.3s;
 }
-.modify-profile input:focus {
+.modify-profile form input:focus {
   outline: none;
   border: solid 2px #fcc8e1;
 }
-.modify-profile button {
+.modify-profile form button {
+  transform: translate(50% -50%);
   margin-bottom: 5vh;
   width: 50%;
   background-color: #fab1d4;
@@ -1811,7 +1815,7 @@ div.mangaPage svg.liked {
   cursor: pointer;
   transition: all ease 0.3s;
 }
-.modify-profile button:hover {
+.modify-profile form button:hover {
   background-color: #fc90c4;
   box-shadow: none;
 }
@@ -3268,6 +3272,29 @@ form fieldset label input[type=checkbox] {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   /* Ajouter un flou au fond */
+  width: 50rem;
+  height: 15rem;
+}
+.backgroundimage .content .content-txt {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.backgroundimage .content .content-txt p {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+.backgroundimage .content .content-txt a {
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+}
+.backgroundimage .content .content-txt a:hover {
+  color: #cc392b;
 }
 .backgroundimage .shuriken {
   height: 10vw;
@@ -3299,8 +3326,8 @@ form fieldset label input[type=checkbox] {
   font-family: var(--ff-bangers);
   letter-spacing: var(--letter-spacing);
   font-size: 2rem;
-  color: #f0f0f0;
-  text-shadow: -1px -1px 10px red, 1px -1px 10px red, -1px 1px 10px red, 1px 1px 10px red;
+  color: #cc392b;
+  text-shadow: -1px -1px 10px rgb(221, 217, 217), 1px -1px 10px rgb(219, 215, 215), -1px 1px 10px rgb(219, 215, 215), 1px 1px 10px rgb(219, 215, 215);
 }
 .backgroundimage p {
   font-family: var(--ff-barlow);
@@ -3501,13 +3528,11 @@ form fieldset label input[type=checkbox] {
 **********************************
 */
 .aboutus {
+  background: url(../img/itachi.gif) no-repeat center/cover;
   position: relative;
   height: 100vh;
   overflow: hidden;
-  background-color: #f9f9f9;
-  margin: 20px;
   padding: 20px;
-  background-color: #f9f9f9;
   font-family: Arial, sans-serif;
 }
 .aboutus h1 {
@@ -3522,7 +3547,7 @@ form fieldset label input[type=checkbox] {
   font-family: var(--ff-bangers);
   letter-spacing: var(--letter-spacing);
   font-size: 1.5rem;
-  color: #070707;
+  color: #ffffff;
   margin: 20px;
   opacity: 0;
   transform: translateY(-50px);
@@ -3530,18 +3555,18 @@ form fieldset label input[type=checkbox] {
 .aboutus p {
   font-family: var(--ff-barlow);
   font-size: 1.5rem;
-  color: #070707;
+  color: #ffffff;
   margin: 20px;
   opacity: 0;
   transform: translateY(-50px);
 }
 .aboutus section {
+  background: rgba(14, 14, 14, 0.6352941176);
   max-width: 800px;
   margin: 0 auto;
-  background-color: #fff;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
 }
 .aboutus .flexcenter {
   display: flex;
