--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -91,6 +91,9 @@ body.dark-mode {
   background-color: #202024;
   color: white;
 }
+body.dark-mode .formulaire {
+  background-color: #5cdff7;
+}
 body.dark-mode .menu-desktop figure:nth-of-type(3) a img {
   transition: all 0.3s ease;
 }
@@ -131,8 +134,8 @@ body.dark-mode .resaux-sociaux a:hover path {
 body.dark-mode .hero_category_txt {
   color: var(--fc-black);
 }
-body.dark-mode input {
-  background-color: #ccc;
+body.dark-mode textarea, body.dark-mode input {
+  background-color: #f2ebe8;
 }
 body.dark-mode .general-profile h3 {
   color: white;
@@ -402,6 +405,20 @@ footer > p {
 ***********LOGIN/REGISTER*********
 **********************************
 */
+.img-contact {
+  background: url(../img/contact-us.svg) no-repeat bottom/cover;
+  width: 100%;
+  height: 40vh;
+}
+
+.clickhere {
+  color: rgb(255, 255, 255);
+  transition: all 0.3s ease;
+}
+.clickhere:hover {
+  color: #cc392b;
+}
+
 .connexion input,
 .login input {
   outline: 3px solid hsl(203, 30%, 26%);
@@ -2871,7 +2888,8 @@ button:hover {
   font-family: var(--ff-bangers);
   margin: 1%;
   color: #ffffff;
-  -webkit-text-stroke: 1px red;
+  font-weight: 900;
+  -webkit-text-stroke: 1px #cc392b;
 }
 .formulaire input,
 .formulaire textarea {
@@ -2880,22 +2898,25 @@ button:hover {
   border-radius: 10px;
   border: none;
   background-color: #f5f5f5;
-  outline: 1px solid #b3b34e;
+  outline: 1px solid #333;
+}
+.formulaire input:focus,
+.formulaire textarea:focus {
+  outline: 1px solid #fab1d4;
 }
 .formulaire .button {
   margin: 1%;
   padding: 1%;
   border-radius: 10px;
   border: none;
-  background-color: #cc1606;
-  color: #ffffff;
+  background-color: #cc392b;
+  color: var(--fc-black);
   font-family: var(--ff-bangers);
   cursor: pointer;
   transition: all ease 0.3s;
 }
 .formulaire .button:hover {
-  background-color: #ce685f;
-  color: var(--fc-black);
+  background-color: #e63232;
 }
 
 /*
