--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -99,6 +99,10 @@ body.dark-mode {
   background-color: #202024;
   color: white;
 
+  .formulaire {
+    background-color: #5cdff7;
+  }
+
   .menu-desktop {
     figure:nth-of-type(3) a img {
       transition: all 0.3s ease;
@@ -158,8 +162,8 @@ body.dark-mode {
     color: var(--fc-black);
   }
 
-  input {
-    background-color: #ccc;
+  textarea, input {
+    background-color: #f2ebe8;
   }
 
   .general-profile {
@@ -478,7 +482,18 @@ footer > p {
 ***********LOGIN/REGISTER*********
 **********************************
 */
-
+.img-contact{
+  background: url(../img/contact-us.svg) no-repeat bottom/cover;
+  width: 100%;
+  height: 40vh;
+}
+.clickhere{
+  color: rgb(255, 255, 255);
+  transition: all 0.3s ease;
+  &:hover{
+    color: #cc392b;
+  }
+}
 .connexion input, 
 .login input {
   outline: 3px solid hsl(203, 30%, 26%);
@@ -3291,7 +3306,8 @@ overflow: scroll;
     font-family: var(--ff-bangers);
     margin: 1%;
     color: #ffffff;
-    -webkit-text-stroke: 1px red;
+    font-weight: 900;
+    -webkit-text-stroke: 1px #cc392b;
   }
 
   input,
@@ -3301,7 +3317,10 @@ overflow: scroll;
     border-radius: 10px;
     border: none;
     background-color: #f5f5f5;
-    outline: 1px solid #b3b34e;
+    outline: 1px solid #333;
+    &:focus{
+      outline: 1px solid #fab1d4;
+    }
   }
 
   .button {
@@ -3309,15 +3328,14 @@ overflow: scroll;
     padding: 1%;
     border-radius: 10px;
     border: none;
-    background-color: #cc1606;
-    color: #ffffff;
+    background-color: #cc392b;
+    color: var(--fc-black);
     font-family: var(--ff-bangers);
     cursor: pointer;
     transition: all ease 0.3s;
 
     &:hover {
-      background-color: #ce685f;
-      color: var(--fc-black);
+      background-color: #e63232;
     }
   }
 }
