--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -3513,6 +3513,7 @@ form fieldset label input[type=checkbox] {
   font-size: 1.5rem;
   font-family: var(--ff-barlow);
   transition: all ease 0.3s;
+  cursor: pointer;
 }
 .pagecart .cartbutton:hover {
   background-color: #cc1606;
